update version php and support for magento 2.4

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,11 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
+    },
+    "repositories": {
+        "bpay-ref-generator": {
+            "type": "vcs",
+            "url": "https://github.com/vuthuan/bpay-ref-generator.git"
+        }
     }
 }
