update version php and support for magento 2.4

--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     "require-dev": {
         "phpunit/phpunit": "^6.4"
     },
-    "repositories": {
-        "bpay-ref-generator": {
+    "repositories": [
+        {
             "type": "vcs",
             "url": "https://github.com/vuthuan/bpay-ref-generator.git"
         }
-    }
+    ]
 }
