--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "license": "OSL-3.0",
     "require": {
-        "php": ">=7.0"
+        "php": "~7.1.0|~7.1.3|~7.2.0|~7.3.0|~7.4.0"
     },
     "autoload": {
         "psr-4": {
